﻿shmuel 29.08.2018 19:47:30 +0200 - build 662

1. LuaFAR: M#3644: far.Menu: приоритет SelectIndex перед selected

zg 28.08.2018 19:38:59 +0300 - build 661

1. при обработке событий редактора/просмотра в паре мест использовался текущий редактор/просмотр.

shmuel 25.08.2018 15:50:47 +0200 - build 660

1. M#3643: Макросы для Grabber не работают если фар запущен в режиме редактора/вьюера

shmuel 25.08.2018 11:35:47 +0200 - build 659

1. Из форума: В фаре запущенном как редактор/вьюер (ключи /v /e) не загружаются макросы на Desktop

shmuel 22.08.2018 08:57:15 +0200 - build 658

1. M#3637: Сопоставление по маске при ошибке получения имени в обработчиках событий

shmuel 22.08.2018 08:05:40 +0200 - build 657

1. LuaFAR: file:rawhandle() throws an error in non-GCC compilations.
           This is to prevent a crash caused by incompatible runtime libraries.

shmuel 14.08.2018 12:16:25 +0200 - build 656

1. LuaFAR: export.SetDirectory() получает 5-й параметр (UserData).

shmuel 22.07.2018 18:23:27 +0200 - build 655

1. LuaFAR: в таблице, возвращаемой panel.GetPanelInfo(), добавлено поле PluginObject.

shmuel 07.06.2018 17:27:07 +0200 - build 654

1. LuaFAR: добавлена функция far.RunDefaultScript.

shmuel 16.05.2018 15:01:23 +0200 - build 653

1. LuaFAR: far.SendDlgMessage(DM_LISTDELETE): the 4-th parameter is allowed to be nil or missing.

shmuel 13.05.2018 00:40:47 +0200 - build 652

1. M#3286: Возможность выполнить скрипт только один раз при загрузке
   --> Макрофайлу передаётся вторым аргументом номер текущей загрузки.

shmuel 09.05.2018 12:29:01 +0200 - build 651

1. M#3495: luafar: win.ExtractKey: возвращаемое значение
   --> LuaFAR: добавлена функция win.ExtractKeyEx.

shmuel 09.05.2018 00:05:39 +0200 - build 650

1. M#3448: ExitFAR объединяет два типа событий, которые надо разъединить
   --> добавлен параметр: true=выгрузка макросов; false=выгрузка плагина.

shmuel 08.04.2018 07:00:51 +0200 - build 649

1. Добавлена функция mf.AddExitHandler.
